--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ anyio==4.9.0
 APScheduler==3.11.0
 cachetools==4.2.2
 certifi==2025.7.14
+geopy==2.4.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+python-dotenv==1.0.1
 python-telegram-bot==22.3
 pytz==2025.2
 setuptools==80.9.0
