update webserver code and include env vars

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-# Replace with your actual token from @BotFather
-TELEGRAM_BOT_TOKEN=your_bot_token_here
+# Environment setting (dev or prod)
+ENVIRONMENT=dev
+
+# Development bot token
+TELEGRAM_BOT_TOKEN_DEV=your_dev_bot_token_here
+
+# Production bot token  
+TELEGRAM_BOT_TOKEN_PROD=your_prod_bot_token_here
+
+# Replace with your production URL
+PROD_URL=your_production_url_here
