--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,11 @@ TELEGRAM_BOT_TOKEN_DEV=your_dev_bot_token_here
 # Production bot token  
 TELEGRAM_BOT_TOKEN_PROD=your_prod_bot_token_here
 
+# Google Sheets API Configuration
+# For public sheets, you can use an API key
+GOOGLE_SHEETS_API_KEY=your_api_key_here
+GOOGLE_SHEETS_SPREADSHEET_ID=your_spreadsheet_id_here
+GOOGLE_SHEETS_RANGE=Sheet1
+
 # Replace with your production URL
 PROD_URL=your_production_url_here
