feat: add user tracking logic

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ GOOGLE_SHEETS_RANGE=Sheet1
 
 # Replace with your production URL
 PROD_URL=your_production_url_here
+
+# Database URL for PostgreSQL
+DATABASE_URL=postgresql://username:password@host:port/database_name
