feat: add scope (nus/sg), feedback, update workflows
feat: change link from navigation -> query

feat: add location type

feat: add feedback and update existing workflows

--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,26 @@ TELEGRAM_BOT_TOKEN_DEV=your_dev_bot_token_here
 # Production bot token  
 TELEGRAM_BOT_TOKEN_PROD=your_prod_bot_token_here
 
+# Scope setting (nus or sg)
+# - 'nus': Only use Google Sheets as data source (default)
+# - 'sg': Use both Google Sheets and Musollah API as data sources
+SCOPE=nus
+
 # Google Sheets API Configuration
 # For public sheets, you can use an API key
 GOOGLE_SHEETS_API_KEY=your_api_key_here
 GOOGLE_SHEETS_SPREADSHEET_ID=your_spreadsheet_id_here
 GOOGLE_SHEETS_RANGE=Sheet1
 
+# Musollah API Configuration
+MUSOLLAH_API_KEY=your_musollah_api_key_here
+
 # Replace with your production URL
 PROD_URL=your_production_url_here
 
 # Database URL for PostgreSQL
 DATABASE_URL=postgresql://username:password@host:port/database_name
+
+# Telegram group chat ID for developer feedback
+# You can get this by adding @RawDataBot to your group
+DEVELOPER_GROUP_ID=your_group_chat_id_here
