--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,10 @@ MUSOLLAH_API_KEY=your_musollah_api_key_here
 # Replace with your production URL
 PROD_URL=your_production_url_here
 
-# Database URL for PostgreSQL
-DATABASE_URL=postgresql://username:password@host:port/database_name
+# Database URL for Supabase
+SUPABASE_URL=https://<url_id>.supabase.co
+SUPABASE_ANON_KEY=starts_with_eyJ
+
 
 # Telegram group chat ID for developer feedback
 # You can get this by adding @RawDataBot to your group
